<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_marginLeft="@dimen/_5sdp"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/order_continue_success_text_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                android:text="@string/order_success_placed"
                android:textColor="@color/text_color"
                android:textSize="@dimen/body" />

            <TextView
                android:id="@+id/order_continue_success_text_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                android:text="@string/order_success"
                android:textColor="@color/text_color"
                android:textSize="@dimen/body" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/order_continue"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="300dp"
        android:background="@drawable/mybutton"
        android:text="@string/_continue"
        android:textColor="@color/white"
        android:textSize="@dimen/body" />
</FrameLayout>