<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".activity.user.ForgetPassword">



        <include
            android:id="@+id/app_bar"
            layout="@layout/app_bar"
            />

        <ScrollView
            android:layout_width="match_parent"
            android:background="@color/colorPrimary2"
            android:layout_height="match_parent">



            <LinearLayout
                android:id="@+id/layout_l_forgot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_forget_pwd_pg_forget_pwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_marginTop="100dp"
                    android:layout_marginLeft="80dp"
                    android:paddingEnd="@dimen/_5sdp"
                    android:paddingLeft="10.00dp"
                    android:paddingRight="@dimen/_5sdp"
                    android:paddingStart="@dimen/_5sdp"
                    android:text="@string/forgot_password_title"
                    android:textSize="@dimen/title"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:id="@+id/layout_forget_pwd_get_email_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="vertical"
                    android:padding="@dimen/_5sdp">

                    <TextView
                        android:id="@+id/tv_show_pwd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/white"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:gravity="start"
                        android:padding="@dimen/_4sdp"
                        android:text="@string/sentence_for_get_email"
                        android:textSize="@dimen/sub_heading" />

                    <TextView
                        android:id="@+id/tv_title_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:textColor="@color/white"
                        android:text="@string/e_mail"
                        android:textSize="@dimen/body"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/et_enter_email_id_for_link"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"


                        android:hint="@string/please_enter_your_email_id"
                        android:inputType="textEmailAddress"
                        android:padding="@dimen/_10sdp"
                        android:textColorHint="@color/grey_500"
                        android:textSize="@dimen/body"
                        android:textColor="@color/black" />

                </LinearLayout>



                <Button
                    android:id="@+id/btn_back_to_login"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_2sdp"
                    android:layout_marginRight="@dimen/_2sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:layout_weight="0.5"
                    android:background="@drawable/mybutton"
                    android:gravity="center"
                    android:text="@string/back"
                    android:textColor="@color/white"
                    android:textSize="@dimen/body" />

                <Button
                    android:id="@+id/btn_send_email"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_2sdp"
                    android:layout_marginStart="@dimen/_2sdp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/myyshape"
                    android:gravity="center"
                    android:text="@string/send_email"
                    android:textColor="@color/white"
                    android:textSize="@dimen/body" />

            </LinearLayout>

        </ScrollView>
    </LinearLayout>