<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="@dimen/_16sdp"
    android:layout_marginLeft="@dimen/_16sdp"
    android:layout_marginRight="@dimen/_16sdp"
    android:layout_marginStart="@dimen/_16sdp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/review_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_action_grade_red_10dp"
        android:drawableRight="@drawable/ic_action_grade_red_10dp"
        android:padding="@dimen/_5sdp"
        android:text="@string/review"
        android:textColor="@color/text_color"
        android:textSize="@dimen/sub_heading" />

    <EditText
        android:id="@+id/review_name_comment_value"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/edit_text_modified_text_state"
        android:inputType="textMultiLine"
        android:padding="@dimen/_5sdp"
        android:textColor="@color/text_color"
        android:textColorHint="@color/grey_400"
        android:textSize="@dimen/sub_heading" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_action_grade_red_10dp"
        android:drawableRight="@drawable/ic_action_grade_red_10dp"
        android:padding="@dimen/_5sdp"
        android:text="@string/rating"
        android:textColor="@color/text_color"
        android:textSize="@dimen/sub_heading" />

    <RatingBar
        android:id="@+id/product_detail_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_margin="@dimen/_10sdp"
        android:theme="@style/RatingBar"
        android:stepSize="0.5"
        android:numStars="5" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">


        <Button
            android:id="@+id/review_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_35sdp"
            android:background="@color/grey_500"
            android:text="@string/button_cancel"
            android:textColor="@color/white"
            android:textSize="@dimen/body" />

        <Button
            android:id="@+id/review_submit"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_35sdp"
            android:layout_gravity="end"
            android:layout_marginLeft="@dimen/_4sdp"
            android:layout_marginStart="@dimen/_4sdp"
            android:background="@color/abc_search_url_text_normal"
            android:text="@string/post"
            android:textColor="@color/white"
            android:textSize="@dimen/body" />

    </LinearLayout>

    <View
        android:id="@+id/spliteliner_product_price_review_bottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginBottom="@dimen/_4sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@color/grey_300" />


</LinearLayout>